--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>Wine About It</title>
   </head>
-  <body>
+  <body style="background:rgb(245, 245, 245)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
