--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,6 @@
   </head>
   <body style="background:rgb(245, 245, 245)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div style="font-family: 'HelpUsGiambattista', sans-serif;" id="root"></div>
   </body>
 </html>
